--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   firebase_core: "^0.7.0"
+  database: ^0.3.3
   firebase_auth: ^0.20.0+1
 
 
